Fix: Color readability issue

--- a/css/index.css
+++ b/css/index.css
@@ -21,3 +21,7 @@ body {
     padding-top: 40px;
     padding-bottom: 30px;
 }
+
+.title-font {
+    color: #A9A9A9;
+}
